--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,13 +10,14 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+    env:
+      GO_VERSION: 1.16
 
+  steps:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: '1.16'
 
     - name: Dependencies
       run: go mod download
@@ -26,3 +27,12 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: CI Successful Ok
+      if: success()
+      uses: rtCamp/action-slack-notify@v2
+      with:
+        status: 'passed'
+        text: 'Go CI succesfully.'
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
