--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,13 @@
+# This workflow will build a golang project
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+
 name: Go
 
 on:
   push:
-    branches: [main, develop]
+    branches: [ main, develop ]
   pull_request:
-    branches: [main, develop]
+    branches: [ main, develop ]
 
 jobs:
 
@@ -13,13 +16,16 @@ jobs:
     env:
       GO_VERSION: 1.16
 
-  steps:
-    - name: Set up Go
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go ${{ env.GO_VERSION }}
       uses: actions/setup-go@v4
       with:
-        go-version: '1.16'
+        go-version: ${{ env.GO_VERSION }}
 
-    - name: Dependencies
+
+    - name: Install Dependencies
       run: go mod download
 
     - name: Build
@@ -27,12 +33,12 @@ jobs:
 
     - name: Test
       run: go test -json
-    
-- name: CI Successful Ok
+
+    - name: CI Succesful OK
       if: success()
       uses: rtCamp/action-slack-notify@v2
-      with:
+      with: 
         status: 'passed'
-        text: 'Go CI succesfully.'
+        text: "go CI succesfully on L"
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
