--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [main, develop]
+    branches: [ main, develop ]
   pull_request:
-    branches: [main, develop]
+    branches: [ main, develop ]
 
 jobs:
 
@@ -13,26 +13,29 @@ jobs:
     env:
       GO_VERSION: 1.16
 
-  steps:
-    - name: Set up Go
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Set up Go ${{ env.GO_VERSION }}
       uses: actions/setup-go@v4
       with:
-        go-version: '1.16'
+        go-version: ${{ env.GO_VERSION }}
 
-    - name: Dependencies
+
+    - name: Install Dependencies
       run: go mod download
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -json
 
-    - name: CI Successful Ok
+    - name: CI Succesful OK
       if: success()
       uses: rtCamp/action-slack-notify@v2
-      with:
+      with: 
         status: 'passed'
-        text: 'Go CI succesfully.'
+        text: "go CI succesfully on L"
       env:
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
